--- a/3D/Info.plist
+++ b/3D/Info.plist
@@ -25,6 +25,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Proxima Nova Light.ttf</string>
+		<string>ProximaNova-Reg.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
